Fixing home page overflow at mobile device

--- a/css/general/home.css
+++ b/css/general/home.css
@@ -14,7 +14,7 @@
     margin-bottom: 12vh;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    padding-left: 8%;
+    padding-left: 9%;
     padding-right: 5%;
     border-radius: 15px;
     display: grid;
@@ -34,6 +34,7 @@
 
 @media (max-width: 680px) {
     .hero-section {
+        height: 90vh;
         padding-left: 12%;
         padding-right: 12%;
         grid-template-columns: 1fr;
